--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,20 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="orange_700">#E26F10</color>
+    <color name="orange_500">#EBF1921F</color>
+    <color name="orange_200">#FF9B04</color>
+    <color name="gray_400">#2A2C2B</color>
+    <color name="green_400">#01AA01</color>
+    <color name="gray_200">#7C7E7D</color>
+    <color name="gray_300">#3B3C3B</color>
+    <color name="blue_100">#0C8EFF</color>
+    <color name="gray_350">#07F5FBF8</color>
+
+    <color name="orange_800">#8C3E02</color>
+
+    <color name="orange_90">#A8FB9F2C</color>
+
+
 </resources>
